# ParticuleEngineFramework

./: .gitignore  BuildDemo.bat  StartDemo.bat
CasioCg/: CMakeLists.txt  Make.bat
CasioCg/Particule/includes/ParticuleEssential/Graphic/: Window.hpp
CasioCg/Particule/srcs/: ParticuleEssential.cpp
CasioCg/Particule/srcs/ParticuleEssential/Graphic/: Window.cpp
CasioCg/Particule/srcs/ParticuleEssential/Input/: Input.cpp
Demo/: Makefile
Demo/src/: main.cpp
Editor/: Build.py  MakefileLinux.mk  MakefileWin.mk  Project.py  build_info.json  project.json
Editor/libs/DearImGui/: DearImGui.h  DearImGui.hpp  ImGuiUtils.h
Editor/srcs/: ParticuleHub.cpp
Editor/srcs/ParticuleHub/: ParticuleHub.cpp
Framework/: Framework.py  testerCg.bat  testerWin.bat
Framework/Api/: Api.py  Builder.py
Framework/Api/Distributions/CasioCg/: Builder.py  Extra.py  Installer.py
Framework/Api/Distributions/Windows/: Builder.py  Distribution.py  Installer.py
Framework/Api/Distributions/Windows/Config/: vcvars.py
Framework/Api/Distributions/Windows/MakeVersions/: MakeVisualStudio.py
Framework/Api/Interface/include/ParticuleApi/: ParticuleApi.hpp
Framework/Api/PythonModules/: BaseConfig.py  BaseInstaller.py  MultiPlatform.py
Framework/BaseFramework/includes/ParticuleEngine/: ParticuleEngine.hpp
Framework/BaseFramework/includes/ParticuleEngine/Components/: Components.hpp
Framework/BaseFramework/includes/ParticuleEngine/Core/: Component.hpp  GameObject.hpp  Object.hpp  Transform.hpp
Framework/BaseFramework/includes/ParticuleEngine/Enum/: Layer.hpp  Tag.hpp
Framework/BaseFramework/includes/ParticuleEngine/Scene/: Scene.hpp  SceneManager.hpp
Framework/BaseFramework/includes/ParticuleEssential/: ParticuleEssential.hpp
Framework/BaseFramework/includes/ParticuleEssential/Basic/: Basic.hpp
Framework/BaseFramework/includes/ParticuleEssential/Font/: Font.hpp
Framework/BaseFramework/includes/ParticuleEssential/Graphic/: Color.hpp  Window.hpp
Framework/BaseFramework/includes/ParticuleEssential/Input/: Input.hpp
Framework/BaseFramework/includes/ParticuleEssential/System/: VirtualFile.hpp
Framework/BaseFramework/includes/ParticuleEssential/Texture/: Sprite.hpp  Texture.hpp
Framework/BaseFramework/includes/ParticuleEssential/Types/: Dict.hpp  Dict.tpp  FixedPoint.hpp  LambdaFunction.hpp  List.hpp  List.tpp  Matrix.hpp  Rect.hpp  String.hpp  Vector2.hpp  Vector2Int.hpp  Vector3.hpp  Vector3Int.hpp
Framework/BaseFramework/srcs/ParticuleEngine/: ParticuleEngine.cpp
Framework/BaseFramework/srcs/ParticuleEngine/Core/: Component.cpp  GameObject.cpp  Transform.cpp
Framework/BaseFramework/srcs/ParticuleEngine/Scene/: Scene.cpp  SceneManager.cpp
Framework/Demos/Cube3D/srcs/: FreeCam.cpp  main.cpp
Framework/Demos/SimpleEmptyWindow/srcs/: main.cpp
Framework/Distributions/CasioCg/: Distribution.py
Framework/Distributions/CasioCg/Demo/: CMakeLists.txt
Framework/Distributions/CasioCg/Demos/Demo1/: CMakeLists.txt
Framework/Distributions/CasioCg/Demos/Demo1/assets/Images/: fxconv-metadata.txt
Framework/Distributions/CasioCg/Demos/Demo1/src/: main.cpp
Framework/Distributions/Linux/: Demo.py  Distribution.py  MakefileBuild.mk  System.py
Framework/Distributions/Linux/Demos/Demo1/: Makefile
Framework/Distributions/Windows/: Distribution.py  MakefileBuild.mk
Framework/ProjectBuilder/: BuildProject.py  NewProject.py  ProjectBuilder.py  ProjectEnv.py  ResourcesProject.py  RunProject.py
Framework/ProjectBuilder/DefaultSources/: Project.py
Framework/ProjectBuilder/DefaultSources/srcs/: main.cpp
Framework/Sources/Distributions/CasioCg/: CMakeLists.txt  Demo.py  Distribution.py  System.py
Framework/Sources/Distributions/CasioCg/ProjectBuilder/: Build.py  Resources.py  Run.py
Framework/Sources/Distributions/CasioCg/Sources/includes/ParticuleEssential/Font/: Font.hpp  InternalFont.hpp
Framework/Sources/Distributions/CasioCg/Sources/includes/ParticuleEssential/Graphic/: Color.hpp  Window.hpp
Framework/Sources/Distributions/CasioCg/Sources/includes/ParticuleEssential/Input/: Input.hpp
Framework/Sources/Distributions/CasioCg/Sources/includes/ParticuleEssential/Texture/: Texture.hpp
Framework/Sources/Distributions/CasioCg/Sources/srcs/: ParticuleEssential.cpp
Framework/Sources/Distributions/CasioCg/Sources/srcs/ParticuleEssential/Font/: InternalFont.cpp
Framework/Sources/Distributions/CasioCg/Sources/srcs/ParticuleEssential/Graphic/: Color.cpp  Window.cpp
Framework/Sources/Distributions/CasioCg/Sources/srcs/ParticuleEssential/Graphic/Draw/: Line.cpp  Pixel.cpp
Framework/Sources/Distributions/CasioCg/Sources/srcs/ParticuleEssential/Input/: Input.cpp
Framework/Sources/Distributions/CasioCg/Sources/srcs/ParticuleEssential/Texture/: Texture.cpp
Framework/Sources/Distributions/Linux/: Distribution.py  MakefileBuild.mk  System.py
Framework/Sources/Distributions/Psp/: MakefileBuild.mk  System.py
Framework/Sources/Distributions/Windows/: Demo.py  Distribution.py  MakefileBuild.mk  System.py
Linux/: install
Particule/includes/ParticuleEngine/Core/: Component.hpp  GameObject.hpp  Transform.hpp
Particule/includes/ParticuleEngine/Enum/: Layer.hpp
Particule/includes/ParticuleEssential/: ParticuleEssential.hpp
Particule/includes/ParticuleEssential/Graphic/: Color.hpp  Window.hpp
Particule/includes/ParticuleEssential/Input/: Input.hpp
Particule/includes/ParticuleEssential/Texture/: Sprite.hpp  Texture.hpp
Particule/includes/ParticuleEssential/Types/: Dict.hpp  List.hpp  List.tpp  Rect.hpp  String.hpp  Vector2.hpp  Vector2Int.hpp  Vector3.hpp  Vector3Int.hpp
Particule/srcs/ParticuleEngine/: ParticuleEngine.cpp
Particule/srcs/ParticuleEngine/Core/: Component.cpp  GameObject.cpp
Particule/srcs/ParticuleEngine/Scene/: SceneManager.cpp
Particule/srcs/ParticuleEssential/Texture/: Sprite.cpp
Particule/srcs/ParticuleEssential/Types/: Dict.cpp  LambdaFunction.cpp  List.cpp  String.cpp  Vector2.cpp  Vector2Int.cpp  Vector3.cpp  Vector3Int.cpp
Windows/: Makefile  MakefileOld  Particule.mk
Windows/Particule/srcs/: ParticuleEssential.cpp
(+240 files in other folders)
